Reduce quarkustest dependency